--- a/Suns/Suns.tex
+++ b/Suns/Suns.tex
@@ -2,7 +2,7 @@
 \input{preamble}
 \input{macros}
 \input{letterfonts}
-
+\input{special_environment}
 \title{Suns}
 \author{Eric Liu}
 \date{}
@@ -557,6 +557,7 @@ g(H\cap K)=l(H\cap K) \implies g^{-1}l \in H \cap K \implies gH=lH\text{ and }gK
 \end{align*}
 such set map is injective since if $gH=lH$ and  $gK=lK$, then  $g^{-1}l \in H$ and $g^{-1}l\in K$, which implies $g(H \cap K)=l(H \cap K)$, as desired. From the injectivity of \myref{map}{EQmgh}, we have shown  index of  $H\cap K$ indeed have upper bound $mn$. \\
 
+
 Because 
 \begin{align*}
 \abso{G:H\cap K}=\abso{G:H}\cdot \abso{H:H\cap K}=\abso{G:K} \cdot \abso{K: H \cap K} 
@@ -913,6 +914,17 @@ The proof follows form noting that if $S \in \operatorname{Syl}_p(MN)$, then by 
 \end{proof}
 \begin{question}{}{}
 Let $G$ be finite with  $A,B \trianglelefteq G$ and $G \quotient A,G \quotient B$ solvable. Prove that $G \quotient (A \cap B)$ is solvable.   
+\end{question}
+\begin{proof}
+Solvable. 
+\end{proof}
+\setcounter{qnum}{63}
+\begin{question}{dsljfkdslf}{}
+
+  dfjlk
+\end{question}
+\begin{question}{Name of the question}{}
+The statement of the question. 
 \end{question}
 \end{document}
 
