--- a/Suns/letterfonts.tex
+++ b/Suns/letterfonts.tex
@@ -9,3 +9,17 @@
 \renewcommand{\S}{\mathbb{S}}
 \newcommand{\A}{\mathbb{A}}
 \newcommand{\RP}{\R P}
+
+\newcommand{\blue}[1]{\textcolor{blue}{#1}}
+\newcommand{\vi}[1]{\textcolor{violet}{#1}}
+\newcommand{\olive}[1]{\textcolor{olive}{#1}}
+\newcommand{\teal}[1]{\textcolor{teal}{#1}}
+\newcommand{\brown}[1]{\textcolor{brown}{#1}}
+\newcommand{\orange}[1]{\textcolor{orange}{#1}}
+
+\newcommand{\vdone}{\vi{\text{ (done) }}}
+\newcommand{\bdone}{\blue{\text{ (done) }}}
+\newcommand{\tdone}{\teal{\text{ (done) }}}
+\newcommand{\odone}{\olive{\text{ (done) }}}
+\newcommand{\bodone}{\brown{\text{ (done) }}}
+\newcommand{\ordone}{\orange{\text{ (done) }}}
