--- a/Linear Algebra Done Taiwan/letterfonts.tex
+++ b/Linear Algebra Done Taiwan/letterfonts.tex
@@ -7,4 +7,5 @@
 \newcommand{\Z}{\mathbb{Z}}
 \renewcommand{\P}{\mathbb{P}}
 \renewcommand{\S}{\mathbb{S}}
+\newcommand{\A}{\mathbb{A}}
 \newcommand{\RP}{\R P}
