--- a/Linear Algebra Done Taiwan/preamble.tex
+++ b/Linear Algebra Done Taiwan/preamble.tex
@@ -8,6 +8,7 @@
 \usepackage{tikz}
 \usepackage{mathrsfs}
 \usepackage{mdframed}
+\usepackage[new]{old-arrows}
 
 % Create a new toggle
 \newtoggle{firstsection}
@@ -25,24 +26,6 @@
     \oldsection
 }
 
-% Abstract Design
-
-\usepackage{lipsum}
-
-\renewenvironment{abstract}
- {% Start of environment
-  \quotation
-  \small
-  \noindent
-  \rule{\linewidth}{.5pt} % Draw the rule to match the linewidth
-  \par\smallskip
-  {\centering\bfseries\abstractname\par}\medskip
- }
- {% End of environment
-  \par\noindent
-  \rule{\linewidth}{.5pt} % Ensure the closing rule also matches
-  \endquotation
- }
 
 % Mathematics
 \usepackage{amsmath,amsfonts,amsthm,amssymb,mathtools}
@@ -106,136 +89,8 @@
 \newtheorem{lemma}[theorem]{Lemma}  
 \newtheorem{corollary}[theorem]{Corollary}
 \newtheorem{axiom}[theorem]{Axiom}
-\newtheorem{example}[theorem]{Example}
+\newtheorem{proposition}[theorem]{Proposition}
 \newtheorem{equiv_def}[theorem]{Equivalent Definition}
-
-% tcolorbox Setup
-\usepackage[most,many,breakable]{tcolorbox}
-\tcbuselibrary{theorems}
-
-% Define custom tcolorbox environments here...
-
-%================================
-% EXAMPLE BOX
-%================================
-% After you have defined the style and other theorem environments
-\definecolor{myexamplebg}{RGB}{245, 245, 245} % Very light grey for background
-\definecolor{myexamplefr}{RGB}{120, 120, 120} % Medium grey for frame
-\definecolor{myexampleti}{RGB}{60, 60, 60}    % Darker grey for title
-
-\newtcbtheorem[]{Example}{Example}{
-    colback=myexamplebg,
-    breakable,
-    colframe=myexamplefr,
-    coltitle=myexampleti,
-    boxrule=1pt,
-    sharp corners,
-    detach title,
-    before upper=\tcbtitle\par\vspace{-20pt}, % Reduced the space after the title
-    fonttitle=\bfseries,
-    description font=\mdseries,
-    separator sign none,
-    description delimiters={}{}, % No delimiters around the title
-}{ex}
-%================================
-% Solution BOX
-%================================
-\makeatletter
-\newtcolorbox{solution}{enhanced,
-	breakable,
-	colback=white,
-	colframe=myg!80!black,
-	attach boxed title to top left={yshift*=-\tcboxedtitleheight},
-	title=Solution,
-	boxed title size=title,
-	boxed title style={%
-			sharp corners,
-			rounded corners=northwest,
-			colback=tcbcolframe,
-			boxrule=0pt,
-		},
-	underlay boxed title={%
-			\path[fill=tcbcolframe] (title.south west)--(title.south east)
-			to[out=0, in=180] ([xshift=5mm]title.east)--
-			(title.center-|frame.east)
-			[rounded corners=\kvtcb@arc] |-
-			(frame.north) -| cycle;
-		},
-}
-\makeatother
-
-% %================================
-% % Question BOX
-% %================================
-\makeatletter
-\newtcbtheorem{question}{Question}{enhanced,
-	breakable,
-	colback=white,
-	colframe=myb!80!black,
-	attach boxed title to top left={yshift*=-\tcboxedtitleheight},
-	fonttitle=\bfseries,
-	title={#2},
-	boxed title size=title,
-	boxed title style={%
-			sharp corners,
-			rounded corners=northwest,
-			colback=tcbcolframe,
-			boxrule=0pt,
-		},
-	underlay boxed title={%
-			\path[fill=tcbcolframe] (title.south west)--(title.south east)
-			to[out=0, in=180] ([xshift=5mm]title.east)--
-			(title.center-|frame.east)
-			[rounded corners=\kvtcb@arc] |-
-			(frame.north) -| cycle;
-		},
-	#1
-}{question}
-\makeatother
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% TABLE OF CONTENTS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newtheorem{example}[theorem]{Example}
 
 
-\usepackage{tikz}
-\definecolor{doc}{RGB}{0,60,110}
-\usepackage{titletoc}
-\contentsmargin{0cm}
-\titlecontents{chapter}[14pc]
-{\addvspace{30pt}%
-	\begin{tikzpicture}[remember picture, overlay]%
-		\draw[fill=doc!60,draw=doc!60] (-7,-.1) rectangle (-0.9,.5);%
-		\pgftext[left,x=-5.5cm,y=0.2cm]{\color{white}\Large\sc\bfseries Chapter\ \thecontentslabel};%
-	\end{tikzpicture}\color{doc!60}\large\sc\bfseries}%
-{}
-{}
-{\;\titlerule\;\large\sc\bfseries Page \thecontentspage
-	\begin{tikzpicture}[remember picture, overlay]
-		\draw[fill=doc!60,draw=doc!60] (2pt,0) rectangle (4,0.1pt);
-	\end{tikzpicture}}%
-\titlecontents{section}[3.7pc]
-{\addvspace{2pt}}
-{\contentslabel[\thecontentslabel]{3pc}}
-{}
-{\hfill\small \thecontentspage}
-[]
-\titlecontents*{subsection}[3.7pc]
-{\addvspace{-1pt}\small}
-{}
-{}
-{\ --- \small\thecontentspage}
-[ \textbullet\ ][]
-
-\makeatletter
-\renewcommand{\tableofcontents}{
-	\chapter*{%
-	  \vspace*{-20\p@}%
-	  \begin{tikzpicture}[remember picture, overlay]%
-		  \pgftext[right,x=15cm,y=0.2cm]{\color{doc!60}\Huge\sc\bfseries \contentsname};%
-		  \draw[fill=doc!60,draw=doc!60] (13,-.75) rectangle (20,1);%
-		  \clip (13,-.75) rectangle (20,1);
-		  \pgftext[right,x=15cm,y=0.2cm]{\color{white}\Huge\sc\bfseries \contentsname};%
-	  \end{tikzpicture}}%
-	\@starttoc{toc}}
-\makeatother
