--- a/Linear Algebra Done Taiwan/Linear_Algebra_Done_TW.tex
+++ b/Linear Algebra Done Taiwan/Linear_Algebra_Done_TW.tex
@@ -2851,6 +2851,47 @@ then $\R^n=W_k$ for some $k$.
 \begin{proof}
 
 \end{proof}
+\section{Answer}
+\begin{question}{}{}
+Let $p,q,r$ be distinct primes. Give the list of elementary divisors and the list of invariant factors for every possible abelian group of order $pq^2r^3$. 
+\end{question}
+\begin{proof}
+\begin{align*}
+p,q^2,r^3 \quad \text{ and }\quad  pq^2r^3 \\
+p,q,q,r^3\quad \text{ and }\quad q,pqr^3 \\
+p,q^2 ,r,r^2 \quad \text{ and }\quad r,pq^2r^2   \\
+p,q,q,r,r^2\quad \text{ and }\quad  qr,pqr^2  \\
+p,q^2,r,r,r\quad \text{ and }\quad r,r,pq^2r \\
+p,q,q,r,r,r\quad \text{ and }\quad r,qr,pqr
+\end{align*}
+\end{proof}
+\begin{question}{}{}
+Let $\langle a\rangle $ be a cyclic group of order $90$. Write  $a$ as the product of  $p$-elements. 
+\end{question}
+\begin{proof}
+
+\end{proof}
+\setcounter{qnum}{3}
+\begin{question}{}{}
+Write $U(32)$ as the internal direct product of two proper normal subgroup. 
+\end{question}
+\begin{proof}
+There were two approaches presented. One is to first argue that   
+\begin{align*}
+U(32)\cong  C_8 \times C_2
+\end{align*}
+and then find $a \in U(32),b \in U(32)$ with $o(a)=8$ and $o(b)=2$. Then argue that when one writes $U(32)\cong  C_8\times C_2$, one must has $\langle a\rangle =C_8 \times \set{e}$ and $\langle b\rangle =\set{e}\times C_2$. \\
+
+If one took this approach, then finding $a$ and $b$ get $4$ points, claiming $U(32)\cong  C_8 \times C_2$ get $2$ points, showing $U(32)\cong  C_8 \times C_2$ get $1$ point (I give pretty much all of them this one point if they write something that makes me believe that they were aware of the common fact $U(2^n)\cong C_{2^{n-2}}\times C_2$). The rest are worth $3$ points.  \\
+
+Another is to first find $a,b \in U(32)$ with order $o(a)=8$ and $o(b)=2$, and then showing $\langle a\rangle \cap \langle b\rangle  = \set{e}$, and then use second isomorphism theorem (or recognition theorem for inner direct product) together with order counting to show that indeed $U(32)$ is the internal direct product of $\langle a\rangle $ and $\langle b\rangle $. \\
+
+If one took this approach, then finding $a$ and  $b$ get $4$ points, claiming $\langle a\rangle \cap \langle b\rangle =\set{e} $ gets $2$ points, showing $\langle a\rangle \cap  \langle b\rangle =\set{e}$ get $1$ point. The rest are worth $3$ points.  
+
+
+
+\end{proof}
+
 \chapter{Archived}
 \section{Tensor Algebra}
 \begin{abstract}
