--- a/Suns/letterfonts.tex
+++ b/Suns/letterfonts.tex
@@ -23,3 +23,6 @@
 \newcommand{\odone}{\olive{\text{ (done) }}}
 \newcommand{\bodone}{\brown{\text{ (done) }}}
 \newcommand{\ordone}{\orange{\text{ (done) }}}
+
+\DeclareMathOperator*{\colim}{colim}
+\DeclareMathOperator*{\Hom}{Hom}
